shell: Vertically align machines navbar link correctly
Closes #2172

--- a/pkg/shell/shell.css
+++ b/pkg/shell/shell.css
@@ -863,6 +863,7 @@ ul.available-interfaces-group {
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
+    vertical-align: middle;
 }
 
 .machine-avatar {
